--- a/WindowsFormsApp3/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3/WindowsFormsApp3.csproj
@@ -63,6 +63,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events.cs" />
+    <Compile Include="FindString.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindString.Designer.cs">
+      <DependentUpon>FindString.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ShowStringFBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowStringFBase.Designer.cs">
+      <DependentUpon>ShowStringFBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlEssentials.cs" />
     <Compile Include="Database1DataSet.cs">
       <DependentUpon>Database1DataSet.xsd</DependentUpon>
@@ -87,6 +99,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structs.cs" />
+    <EmbeddedResource Include="FindString.resx">
+      <DependentUpon>FindString.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +117,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ShowStringFBase.resx">
+      <DependentUpon>ShowStringFBase.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Database1DataSet.xsc">
       <DependentUpon>Database1DataSet.xsd</DependentUpon>
     </None>
